fixed modal stylings, aded about page, attempted pdf

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Austin Raye Art and Design Portfolio",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "AUSTIN RAYE LOGO CIRCLE.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
