--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "heroku": "^7.19.4",
     "jquery": "^3.3.1",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
